Convert the project as a maven project. Update to blueprints version 2.6.0 Fix build [#1]